src/test/run-pass/if-bot.rs


fn main() { let i: int = if false { fail } else { 5 }; log i; }
